- fixed (i18n): Resolved a critical issue where the 'Yes/No' prompts failed to accept universal ASCII input (like 'n' for No) when the locale used non-ASCII characters (e.g., Russian 'н'/'д').
- refactor (i18n): Reworked title string logic to use a dynamic variable (`{ModsUpdater_author}`) instead of hardcoding the author's name, preparing the codebase for easier redistribution or branding changes.
- refactor (Logic): Reworked the mod update check logic (`mods_update_checker.py`) to sequentially pre-filter user-excluded mods. This centralizes exclusion logic and **prevents unnecessary network calls** during concurrent processing.
- refactor (Core): Centralized the entire 'Yes/No' user input logic into the robust `utils.prompt_yes_no` function and removed the superfluous and rigid validation loop from `main.py`, making the application flow cleaner and more maintainable.
- refactor (Data): Enriched the `excluded_mods` data in `global_cache` to store the specific `Reason` for exclusion, improving debugging and logging.

v2.3.0:
- Added: a user prompt that allows displaying the changelog for new script updates on demand.
- Added: support for a new API to check for ModsUpdater updates.
- Added: Improved console output with clickable links and better-centered text.
- Fixed: Resolved issues with misaligned text in the console display.
- Fixed: Removed unused code and imports for better performance and readability.
- Fixed: Resolved an issue where mods on the exclusion list were not being properly ignored. The program will now correctly skip all excluded mods and will not attempt to check for their updates or download them. The list of excluded mods is now displayed correctly at the start of the scan process.
- Fixed: The program now correctly identifies and displays local mods in the excluded mods list.
- Changed: The game version display has been rephrased for better clarity.

v2.2.2: