@@ -69,6 +69,7 @@
     "yes": "はい",
     "no": "いいえ",
     "to": "へ",
+    "changelog_version_title": "バージョン",
 
     "dry_run_console_updates_available": "以下のModに利用可能なアップデートがあります：",
     "dry_run_console_no_updates": "すべてのModは最新です。",
